# voip-onion-routing

./: .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE  README.md  template.config
.github/actions-rs/: grcov.yml
.github/workflows/: ci.yml  coverage.yml  dependency-audit.yml
docs/: Initial-Report.md  Midterm-Report.md  Protocol-Design.md  key-exchange-notes.txt
docs/images/: fsm.drawio  logical_structure.drawio  protocol.drawio
onion_bin/: Cargo.toml
onion_bin/src/: main.rs
onion_examples/: Cargo.toml
onion_examples/examples/: basic_example.rs
onion_lib/: Cargo.toml  build.rs
onion_lib/src/: lib.rs
onion_lib/src/api_protocol/: mod.rs
onion_lib/src/api_protocol/api_connection/: mod.rs
onion_lib/src/api_protocol/event/: mod.rs
onion_lib/src/api_protocol/messages/: mod.rs
onion_lib/src/config_parser/: mod.rs
onion_lib/src/p2p_protocol/: mod.rs
onion_lib/src/p2p_protocol/dtls_connections/: mod.rs
onion_lib/src/p2p_protocol/messages/: message_codec.rs  mod.rs  p2p_messages.proto
onion_lib/src/p2p_protocol/onion_tunnel/: frame_id_manager.rs  fsm.rs  message_codec.rs  mod.rs  tunnel_manager.rs
onion_lib/src/p2p_protocol/onion_tunnel/crypto/: mod.rs
onion_lib/src/p2p_protocol/onion_tunnel/fsm/: handshake_fsm.rs  mod.rs
onion_lib/src/p2p_protocol/rps_api/: mod.rs
onion_tests/: Cargo.toml
onion_tests/resources/openssl/: alice.cert  alice.key  alice.key.pub  bob.cert  bob.key  bob.key.pub  hop1.cert  hop1.key  hop1.key.pub  hop2.cert  hop2.key  hop2.key.pub  pki.cert  pki.key
onion_tests/tests/: integration.rs
