[package]
name = "onion_examples"
version = "0.1.0"
authors = [
    "Leon <leon.beckmann@tum.de>",
    "Florian Freund <florian.freund@tum.de>"
]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
onion-lib = { path = "../onion_lib" }

[[example]]
name = "basic_example"
path = "examples/basic_example.rs"
