[package]
name = "onion_examples"
version = "0.1.0"
authors = [
    "Leon <leon.beckmann@tum.de>",
    "Florian Freund <florian.freund@tum.de>"
]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
env_logger = "0.8.3"
onion-lib = { path = "../onion_lib" }
tempdir = "0.3.7"
openssl = "0.10.34"
rust-ini = "0.17.0"

[[example]]
name = "basic_example"
path = "examples/basic_example.rs"
