[package]
name = "onion-lib"
version = "0.1.0"
authors = [
    "Leon <leon.beckmann@tum.de>",
    "Florian Freund <florian.freund@tum.de>"
]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
env_logger = "0.8.3"
anyhow = "1.0.40"
thiserror = "1.0.24"
rust-ini = "0.17.0"     # for parsing ini configuration files
openssl = "0.10.34"
tokio = { version = "1.5.0", features = ["full"] }
bytes = "1.0.1"
protobuf = {version = "2.23.0", features = ["with-bytes"]}
async-trait = "0.1.50"
rand = "0.8.3"

[build-dependencies]
protoc-rust = "2.23.0"

[dev-dependencies]
tempdir = "0.3.7"       # used for creating temp dir for testing config-parser
