[package]
name = "onion_tests"
version = "0.1.0"
authors = ["Leon <leon.beckmann@tum.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
onion-lib = { path = "../onion_lib" }

[[test]]
name = "integration"
path = "tests/integration.rs"