[package]
name = "onion_tests"
version = "0.1.0"
authors = [
    "Leon <leon.beckmann@tum.de>",
    "Florian Freund <florian.freund@tum.de>"
]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
onion-lib = { path = "../onion_lib" }
log = "0.4.14"
env_logger = "0.8.3"
anyhow = "1.0.40"
tempfile = "3.2.0"
openssl = "0.10.34"
rust-ini = "0.17.0"
rand = "0.8.3"

[[test]]
name = "integration"
path = "tests/integration.rs"